--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about" class="page-scroll">Nosotros</a></li>
-        <li><a href="#restaurant-menu" class="page-scroll">Menu</a></li>
-        <li><a href="#portfolio" class="page-scroll">Galeria</a></li>
+        <li><a href="#about" class="page-scroll">Sobre nosotros</a></li>
+        <li><a href="#restaurant-menu" class="page-scroll">Menú</a></li>
+        <li><a href="#portfolio" class="page-scroll">Fotos</a></li>
         <li><a href="#team" class="page-scroll">Chefs</a></li>
         <li><a href="#call-reservation" class="page-scroll">Conctacto</a></li>
       </ul>
